<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".mvp.ui.activity.LoginActivity">
  <ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/loginbg"/>
  <android.support.v4.widget.NestedScrollView
    android:fillViewport="true"

    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="70dp"
      android:paddingRight="70dp"
      android:gravity="center_horizontal"
      android:orientation="vertical">
      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:src="@mipmap/login_icon"/>
      <FrameLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="18dp">
        <ImageView
          android:layout_width="wrap_content"
          android:layout_gravity="left|center_vertical"
          android:layout_marginBottom="5dp"
          android:layout_marginLeft="10dp"
          android:layout_height="wrap_content"
          android:src="@mipmap/login_user"/>
        <android.support.v7.widget.AppCompatEditText
          android:id="@+id/etUserNo"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingLeft="48dp"
          android:paddingRight="30dp"
          android:hint="请输入用户名"
          android:textColorHint="@color/text_hint"
          android:singleLine="true"
          android:paddingBottom="20dp"
          android:textColor="@color/black"
          android:textSize="16sp"

          />
        <ImageView
          android:id="@+id/ivClear"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="right|center_vertical"

          android:paddingBottom="5dp"
          android:paddingRight="10dp"
          android:src="@mipmap/login_del"/>

      </FrameLayout>
      <FrameLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="18dp">
        <ImageView
          android:layout_width="wrap_content"
          android:layout_gravity="left|center_vertical"
          android:layout_marginBottom="5dp"
          android:layout_marginLeft="10dp"
          android:layout_height="wrap_content"
          android:src="@mipmap/login_password"/>
        <android.support.v7.widget.AppCompatEditText
          android:id="@+id/etPwd"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingLeft="48dp"
          android:singleLine="true"
          android:paddingRight="30dp"
          android:hint="请输入密码"
          android:textColorHint="@color/text_hint"
          android:inputType="textPassword"
          android:paddingBottom="20dp"
          android:textColor="@color/black"
          android:textSize="16sp"
          />
        <ImageView
          android:id="@+id/ivEye"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="right|center_vertical"

          android:paddingBottom="5dp"
          android:paddingRight="10dp"
          android:src="@mipmap/eye_close"/>

      </FrameLayout>
      <RelativeLayout
        android:id="@+id/layLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@mipmap/login_btn">
        <TextView
          android:layout_centerInParent="true"
          android:textSize="16sp"
          android:textColor="@color/white"
          android:paddingBottom="4dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/login"/>
      </RelativeLayout>
      <TextView
        android:id="@+id/tvForgetPWD"
        android:textSize="16sp"
        android:layout_gravity="right"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/describe_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_pwd"/>
      <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

      <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:orientation="horizontal">
          <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:layout_marginRight="5dp"
            android:background="#dedede"/>
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/rent_car"
            android:textColor="@color/describe_dark"
            />
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/driver_head"/>
          <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"

            android:background="#dedede"/>
        </LinearLayout>
      </RelativeLayout>

    </LinearLayout>
  </android.support.v4.widget.NestedScrollView>

</FrameLayout>