<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"

  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
  <ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/info_bg"/>
  <android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
      <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="0dp"

        >
        <RelativeLayout
          android:id="@+id/toolbar_back"
          android:layout_width="55dp"
          android:clickable="true"
          android:background="?android:attr/selectableItemBackground"

          android:layout_height="match_parent"
          android:focusable="true">
          <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_arrow_back_white_24dp"/>
        </RelativeLayout>


        <TextView
          android:id="@+id/toolbar_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:textColor="@color/white"
          android:textSize="18sp"/>

      </android.support.v7.widget.Toolbar>
      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="0.5dp"
        android:background="@mipmap/photo_bg">
        <de.hdodenhof.circleimageview.CircleImageView
          android:padding="2dp"
          android:id="@+id/ivUserImage"
          android:layout_width="76dp"
          android:layout_height="76dp"
          app:civ_border_width="1dp"
          app:civ_border_color="@color/white"/>


      </LinearLayout>
      <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="11dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
          android:id="@+id/tvName"
          android:textSize="16sp"
          android:textColor="@color/white"
          android:includeFontPadding="false"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
        <ImageView
          android:id="@+id/ivSex"
          android:layout_marginLeft="7dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          />

      </LinearLayout>
      <RelativeLayout
        android:gravity="center_vertical"

        android:layout_marginTop="50dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:minHeight="50dp"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:focusable="true">
        <ImageView
          android:layout_centerVertical="true"
          android:id="@+id/ivMobile"
          android:layout_alignParentLeft="true"
          android:layout_marginLeft="48dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@mipmap/mobile"
          />
        <TextView
          android:layout_centerVertical="true"

          android:layout_toRightOf="@id/ivMobile"
          android:textColor="@color/almost_black"
          android:layout_marginLeft="11.5dp"
          android:layout_width="wrap_content"
          android:textSize="16sp"
          android:layout_height="wrap_content"
          android:text="@string/contact_mobile"
          android:layout_toEndOf="@id/ivMobile"/>
        <TextView
          android:layout_centerVertical="true"
          android:layout_marginRight="25.5dp"
          android:id="@+id/tvPhone"
          android:layout_alignParentRight="true"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="16sp"
          android:textColor="@color/describe_dark"/>
      </RelativeLayout>
      <View
        android:layout_marginLeft="25.5dp"
        android:layout_marginRight="25.5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_dark"/>
      <LinearLayout
        android:gravity="center_vertical"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:minHeight="50dp"
        android:layout_height="50dp"
        android:paddingLeft="48dp"
        android:paddingRight="25.5dp"

        android:layout_width="match_parent"
        android:focusable="true">
        <ImageView
          android:id="@+id/ivCompany"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@mipmap/unit"
          />
        <TextView
          android:textColor="@color/almost_black"
          android:layout_marginLeft="11.5dp"
          android:layout_width="wrap_content"
          android:textSize="16sp"
          android:layout_height="wrap_content"
          android:text="@string/company"
          />
        <View
          android:layout_width="0dp"
          android:layout_height="1dp"
          android:layout_weight="1"/>
        <TextView
          android:id="@+id/tvCompany"
          android:singleLine="true"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="16sp"
          android:textColor="#747474"
          />
      </LinearLayout>
      <View
        android:layout_width="match_parent"
        android:layout_height="5.5dp"
        android:background="#e9e9e9"/>
      <RelativeLayout
        android:id="@+id/laySound"
        android:gravity="center_vertical"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:minHeight="50dp"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:focusable="true">
        <ImageView
          android:layout_centerVertical="true"
          android:id="@+id/ivSound1"
          android:layout_alignParentLeft="true"
          android:layout_marginLeft="48dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@mipmap/sound"
          />
        <TextView
          android:layout_centerVertical="true"
          android:layout_toRightOf="@id/ivSound1"
          android:textColor="@color/almost_black"
          android:layout_marginLeft="11.5dp"
          android:layout_width="wrap_content"
          android:textSize="16sp"
          android:layout_height="wrap_content"
          android:text="@string/sound_hint"
          android:layout_toEndOf="@id/ivSound1"/>
        <ImageView
          android:id="@+id/ivSound"
          android:layout_centerVertical="true"
          android:layout_marginRight="25.5dp"
          android:layout_alignParentRight="true"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@mipmap/open"
          />
      </RelativeLayout>
      <View
        android:layout_marginLeft="25.5dp"
        android:layout_marginRight="25.5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_dark"/>
      <RelativeLayout
        android:id="@+id/layNotice"
        android:gravity="center_vertical"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:minHeight="50dp"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:focusable="true">
        <ImageView
          android:layout_centerVertical="true"
          android:id="@+id/ivNotice1"
          android:layout_alignParentLeft="true"
          android:layout_marginLeft="48dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@mipmap/notice"
          />
        <TextView
          android:layout_centerVertical="true"
          android:layout_toRightOf="@id/ivNotice1"
          android:textColor="@color/almost_black"
          android:layout_marginLeft="11.5dp"
          android:layout_width="wrap_content"
          android:textSize="16sp"
          android:layout_height="wrap_content"
          android:text="@string/notice_hint"
          android:layout_toEndOf="@id/ivNotice1"/>
        <ImageView
          android:id="@+id/ivNotice"
          android:layout_centerVertical="true"
          android:layout_marginRight="25.5dp"
          android:layout_alignParentRight="true"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@mipmap/open"
          />
      </RelativeLayout>
      <View
        android:layout_marginLeft="25.5dp"
        android:layout_marginRight="25.5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_dark"/>
      <RelativeLayout
        android:id="@+id/layModifyPwd"
        android:gravity="center_vertical"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:minHeight="50dp"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:focusable="true">
        <ImageView
          android:layout_centerVertical="true"
          android:id="@+id/ivModifyPwd"
          android:layout_alignParentLeft="true"
          android:layout_marginLeft="48dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@mipmap/password"
          />
        <TextView
          android:layout_centerVertical="true"
          android:layout_toRightOf="@id/ivModifyPwd"
          android:textColor="@color/almost_black"
          android:layout_marginLeft="11.5dp"
          android:layout_width="wrap_content"
          android:textSize="16sp"
          android:layout_height="wrap_content"
          android:text="@string/modify_pwd"
          android:layout_toEndOf="@id/ivModifyPwd"/>
        <ImageView
          android:layout_centerVertical="true"
          android:layout_marginRight="25.5dp"
          android:layout_alignParentRight="true"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@mipmap/arrow"
          />
      </RelativeLayout>
      <View
        android:layout_marginLeft="25.5dp"
        android:layout_marginRight="25.5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_dark"/>
      <RelativeLayout
        android:id="@+id/layContact"
        android:gravity="center_vertical"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:minHeight="50dp"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:focusable="true">
        <ImageView
          android:layout_centerVertical="true"
          android:id="@+id/ivContact"
          android:layout_alignParentLeft="true"
          android:layout_marginLeft="48dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@mipmap/contact"
          />
        <TextView
          android:layout_centerVertical="true"
          android:layout_toRightOf="@id/ivContact"
          android:textColor="@color/almost_black"
          android:layout_marginLeft="11.5dp"
          android:layout_width="wrap_content"
          android:textSize="16sp"
          android:layout_height="wrap_content"
          android:text="@string/contact_us"
          android:layout_toEndOf="@id/ivContact"/>
        <ImageView
          android:layout_centerVertical="true"
          android:layout_marginRight="25.5dp"
          android:layout_alignParentRight="true"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@mipmap/arrow"
          />
      </RelativeLayout>
      <View
        android:layout_marginLeft="25.5dp"
        android:layout_marginRight="25.5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_dark"/>
      <RelativeLayout
        android:id="@+id/layUpdateApp"
        android:gravity="center_vertical"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:minHeight="50dp"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:focusable="true">
        <ImageView
          android:layout_centerVertical="true"
          android:id="@+id/ivUpdateApp"
          android:layout_alignParentLeft="true"
          android:layout_marginLeft="48dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@mipmap/upload"
          android:layout_alignParentStart="true"/>
        <TextView
          android:layout_centerVertical="true"
          android:layout_toRightOf="@id/ivUpdateApp"
          android:textColor="@color/almost_black"
          android:layout_marginLeft="11.5dp"
          android:layout_width="wrap_content"
          android:textSize="16sp"
          android:layout_height="wrap_content"
          android:text="@string/update_app"
          android:layout_toEndOf="@id/ivUpdateApp"/>
        <TextView
          android:id="@+id/tvVersionName"
          android:layout_centerVertical="true"
          android:layout_toLeftOf="@id/ivArrow"
          android:text="V1.2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="16sp"
          android:textColor="@color/describe_dark"/>

        <ImageView
          android:id="@+id/ivArrow"
          android:layout_centerVertical="true"
          android:layout_marginRight="25.5dp"
          android:layout_alignParentRight="true"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@mipmap/arrow"
          android:layout_alignParentEnd="true"/>
      </RelativeLayout>







    </LinearLayout>
  </android.support.v4.widget.NestedScrollView>
</FrameLayout>